# collaborative-robotics-2026

./: CLAUDE.md  README.md
ros2_ws/src/tidybot_bringup/: CMakeLists.txt
ros2_ws/src/tidybot_bringup/launch/: real.launch.py  robot.launch.py  sim.launch.py
ros2_ws/src/tidybot_bringup/scripts/: test_arms_real.py  test_planner.py  test_planner_real.py  trajectory_tracking.py
ros2_ws/src/tidybot_control/: setup.py
ros2_ws/src/tidybot_control/tidybot_control/: arm_wrapper_node.py
ros2_ws/src/tidybot_ik/: package.xml  setup.cfg  setup.py
ros2_ws/src/tidybot_ik/tidybot_ik/: __init__.py  motion_planner_node.py  motion_planner_real_node.py
ros2_ws/src/tidybot_msgs/: CMakeLists.txt
ros2_ws/src/tidybot_msgs/srv/: PlanToTarget.srv
