cmake_minimum_required(VERSION 3.8)
project(tidybot_bringup)

find_package(ament_cmake REQUIRED)
find_package(ament_cmake_python REQUIRED)

# Install launch files
install(DIRECTORY launch/
  DESTINATION share/${PROJECT_NAME}/launch
)

# Install config files
install(DIRECTORY config/
  DESTINATION share/${PROJECT_NAME}/config
)

# Install rviz config files
install(DIRECTORY rviz/
  DESTINATION share/${PROJECT_NAME}/rviz
)

# Install Python scripts as executables
install(PROGRAMS
  scripts/test_base.py
  scripts/test_camera.py
  scripts/test_arms.py
  scripts/test_planner.py
  scripts/example_state_machine.py
  scripts/trajectory_tracking.py
  scripts/plot_trajectory.py
  DESTINATION lib/${PROJECT_NAME}
)

ament_package()
