<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tidybot_ik</name>
  <version>0.1.0</version>
  <description>Motion planning and IK solver for TidyBot2 using Mink with collision checking</description>
  <maintainer email="aqiu34@stanford.edu">Alex Qiu</maintainer>
  <maintainer email="mastro1@stanford.edu">Matt Strong</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tidybot_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
